--- a/bookstore/bookstore_web/static/styles.css
+++ b/bookstore/bookstore_web/static/styles.css
@@ -67,6 +67,21 @@ input[type=text], input[type=password] {
     width: 90%;
 }
 
+input[type=number] {
+    background: #F0F0E9;
+    border: medium none;
+    color: #696763;
+    /*display: block;*/
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    height: 40px;
+    margin-bottom: 10px;
+    outline: medium none;
+    padding-left: 10px;
+    width: 10%;
+}
+
 input[type=search] {
     background: #F0F0E9;
     border: medium none;
