--- a/bookstore/bookstore_web/templates/cart.html
+++ b/bookstore/bookstore_web/templates/cart.html
@@ -5,11 +5,13 @@
     {% if user_cart %}
         {% for book, quantity in user_cart.items() %}
             <div>
-                <span style="width: 40%"><a href="{{ url_for('item', book_id=book.book_id) }}">
+                <span style="width: 35%"><a href="{{ url_for('item', book_id=book.book_id) }}">
                     {{ book.author }} <b>{{ book.title }}</b>  ({{ book.release }})</a></span>
-                <span style="width: 10%"><a href="{{ url_for('item', book_id=book.book_id) }}"><img src='https://bookstore-5217.restdb.io/media/{{ book.cover_image[0] }}?s=t'
-                     alt={{ book.title }} width='50px'></a></span>
-                <span style="width: 30%">unit price:
+                <span style="width: 7%"><a href="{{ url_for('item', book_id=book.book_id) }}">
+                    <img src='https://bookstore-5217.restdb.io/media/{{ book.cover_image[0] }}?s=t'
+                     alt={{ book.title }} width='50px' loading="lazy">
+                </a></span>
+                <span style="width: 32%">unit price:
                 {% if book.discount > 0 %}
                 <s>{{ '{:.2f}'.format(book.price) }} {{ currency }}</s>
                     {{ '{:.2f}'.format(book.price - book.price*book.discount/100) }} {{ currency }} (discount:
@@ -17,14 +19,20 @@
             {% else %}
                 {{ '{:.2f}'.format(book.price) }} {{ currency }}
                 {% endif %}</span>
-                <span style="width: 12%">quantity: {{ quantity }}</span>
+                <span style="width: 20%">
+
+                    <form action="{{ url_for('refresh_cart_item', book_id=book.book_id, quantity=quantity) }}"><input type="number" id="quantity" name="quantity" min="1" max="{{ book.quantity }}" value="{{ quantity }}">  <button><i class="fa fa-refresh"></i></button></form>
+
+                </span>
                 <span style="width: 3%"><a href="{{ url_for('remove_cart_item', book_id=book.book_id) }}"
                    id=remove_cart_item_{{ book.book_id }}>
                     <button><i class="fa fa-trash-o"></i></button>
                 </a></span>
             </div>
         {% endfor %}
-        <a style="padding: 0 50px" href="{{ url_for('order') }}"><button>Order</button></a>
+        <div style="text-align: center">
+        <b>Total</b>: <s>{{ '{:.2f}'.format(no_discount_total) }}{{ currency }}</s> <b>{{ '{:.2f}'.format(total) }}{{ currency }}</b> <a style="padding: 0 50px" href="{{ url_for('order') }}"><button>Order</button></a>
+        </div>
     {% else %}
         <p>Your cart is empty</p>
     {% endif %}
